fixed horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.main{
+.main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: absolute;
+  /* position: absolute; */
 }
