--- a/src/Components/UploadSubmission.css
+++ b/src/Components/UploadSubmission.css
@@ -40,3 +40,12 @@
   left: 30;
   margin-right: 20px;
 }
+* {
+  /* outline: 1px solid red; */
+}
+
+@media screen and (max-width: 1100px) {
+  .UploadSubmission {
+    flex-direction: column;
+  }
+}
